--- a/index3.html
+++ b/index3.html
@@ -5,18 +5,88 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="src/output.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e50735d555.js" crossorigin="anonymous"></script>
     <title>Amazon</title>
 </head>
 
 <body>
 
-    <header class="bg-black">
-        <aside>
-            <img src="src/img/amazon-logo2.png" alt="logo amazon">
+    <header>
+        <div class="bg-white h-screen w-screen">
+            <section class="bg-black p-4 flex items-start">
+                <img src="src/img/amazon-logo2.png" alt="logo amazon" class="w-28 h-auto">
+                <p class=" text-white font-bold ml-1">.com.br</p>
+                <div class="flex flex-end">
+                    <img src="src/img/pin (2).png" alt="icone do pin" class="w-6 h-6 ml-3 mt-1 self-end">
+                    <div class="ml-2 flex flex-col">
+                        <P class="text-xs leading-6 text-gray-300 ">A entrega será feita em Recife 53000000 </P>
+                        <p class="text-sm text-white font-bold justify-center">Atualizar CEP</p>
+                    </div>
+                </div>
+                <div class="flex items-center w-full max-w-3xl">
+                    <select class="border border-gray-300 bg-gray-100 text-sm w-[79px] h-10 px-2 py-2 rounded-l-lg ml-3"
+                        title="Pesquisar em">
+                        <option selected="selected" value="search-alias=aps">Todos os departamentos</option>
+                        <option value="search-alias=alexa-skills">Alexa Skills</option>
+                        <option value="search-alias=grocery">Alimentos e Bebidas</option>
+                        <option value="search-alias=warehouse-deals">Amazon Quase Novo</option>
+                        <option value="search-alias=mobile-apps">Apps e Jogos</option>
+                        <option value="search-alias=audible">Audiolivros Audible</option>
+                        <option value="search-alias=automotive">Automotivo</option>
+                        <option value="search-alias=baby">Bebês</option>
+                        <option value="search-alias=beauty">Beleza</option>
+                        <option value="search-alias=luxury-beauty">Beleza de Luxo</option>
+                        <option value="search-alias=fashion-luggage">Bolsas, Malas e Mochilas</option>
+                        <option value="search-alias=toys">Brinquedos e Jogos</option>
+                        <option value="search-alias=home">Casa</option>
+                        <option value="search-alias=popular">CD e Vinil</option>
+                        <option value="search-alias=computers">Computadores e Informática</option>
+                        <option value="search-alias=kitchen">Cozinha</option>
+                        <option value="search-alias=amazon-devices">Dispositivos Amazon</option>
+                        <option value="search-alias=dvd">DVD e Blu-Ray</option>
+                        <option value="search-alias=appliances">Eletrodomésticos</option>
+                        <option value="search-alias=electronics">Eletrônicos</option>
+                        <option value="search-alias=sporting">Esportes e Aventura</option>
+                        <option value="search-alias=hi">Ferramentas e Materiais de Construção</option>
+                        <option value="search-alias=videogames">Games</option>
+                        <option value="search-alias=mi">Instrumentos Musicais</option>
+                        <option value="search-alias=garden">Jardim e Piscina</option>
+                        <option value="search-alias=stripbooks">Livros</option>
+                        <option value="search-alias=digital-text">Loja Kindle</option>
+                        <option value="search-alias=office-products">Material para Escritório e Papelaria</option>
+                        <option value="search-alias=furniture">Móveis e Decoração</option>
+                        <option value="search-alias=pets">Pet Shop</option>
+                        <option value="search-alias=instant-video">Prime Video</option>
+                        <option value="search-alias=industrial">Produtos Industriais e Científicos</option>
+                        <option value="search-alias=specialty-aps-sns">Programe e Poupe</option>
+                        <option value="search-alias=fashion">Roupas, Calçados e Joias</option>
+                        <option value="search-alias=fashion-womens">Roupas, sapatos e joias femininas</option>
+                        <option value="search-alias=fashion-mens">Roupas, sapatos e joias masculinas</option>
+                        <option value="search-alias=fashion-girls">Roupas, sapatos e joias para meninas</option>
+                        <option value="search-alias=fashion-boys">Roupas, sapatos e joias para meninos</option>
+                        <option value="search-alias=fashion-baby">Roupas, sapatos e joias para bebês</option>
+                        <option value="search-alias=hpc">Saúde e Cuidados Pessoais</option>
+                    </select>
 
-            <input class="placeholder:text-gray-500 p" placeholder="Pesquisar Amazon.com.br" type="text" name="search">
-        </aside>
-        <nav></nav>
+                    <input class=" bg-white placeholder:text-black w-80 h-10  border border-white text-base"
+                        placeholder="Pesquisar Amazon.com.br" type="text" name="search">
+                    <button type="submit" name="submit-button" aria-label="Pesquisar"
+                        class="bg-yellow-500 w-12 h-10 rounded-r-lg hover:bg-yellow">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </button>
+                </div>
+                <!-- <div>
+                    <details class="border border-transparent open:border-black/10 open:bg-white" open>
+                        <summary class="text-sm leading-6 font-semibold text-white select-none">Why do
+                            they call it
+                            Ovaltine?</summary>
+                        <div class="mt-3 text-sm leading-6 text-gray-600">
+                            <p>The mug is round. The jar is round. They should call it Roundtine.</p>
+                        </div>
+                    </details>
+                </div> -->
+            </section>
+        </div>
     </header>
 
     <main>
@@ -28,7 +98,6 @@
 
         </nav>
     </footer>
-
 </body>
 
 </html>
